fluids and effects